<fix>:static file:fix paragraph overflow

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -20,14 +20,15 @@
 
 .post-preview,
 .article-body {
+    /* 边框阴影 */
+    -webkit-box-shadow: 0 0 5px #ccc;
+    -moz-box-shadow: 0 0 5px #ccc;
     border: 0;
     border-radius: 0;
     margin-top: 20px;
     padding: 2px 20px 10px 20px;
-    /* 边框阴影 */
-    -webkit-box-shadow: 0 0 5px #ccc;
-    -moz-box-shadow: 0 0 5px #ccc;
     box-shadow: 0 0 5px #0f3741;
+    word-break: break-word;
 }
 
 .post-preview:hover,
